<resources>
    <string name="app_name">Logistics Tycoon</string>
    <string name="accept_button">Accept</string>
    <string name="no_gems">Insufficient gems</string>
    <string name="nickname_error">Nickname is not filled!</string>
    <string name="nickname_doesnt_change">Nickname has not changed</string>

    // MainActivity
    <string name="version">Version </string>
    <string name="tittle_image">gs://logistics-tycoon.appspot.com/inicio_tittle.png</string>
    <string name="content_desc_tittle">App tittle</string>

    // Money fragments
    <string name="money_icon">gs://logistics-tycoon.appspot.com/money_icon.png</string>
    <string name="gems_icon">gs://logistics-tycoon.appspot.com/gem_icon.png</string>


    // quotes
    <string name="quote1">You can search players in User Menu</string>
    <string name="quote2">Trucks go at real speed unless you buy speed bonuses</string>
    <string name="quote3">At level 50 you can enter a partnership"</string>
    <string name="quote4">You can change your nickname in user menu</string>
    <string name="quote5">You can change your avatar in user menu</string>
    <string name="quote6">Adjust your settings in user menu</string>
    <string name="quote7">Set up your nickname and your base location to start to play</string>

    // actualizaciones disponibles
    <string name="actTitulo">Update avalaible</string>
    <string name="actDescripcion">Do you want to download the update?</string>
    <string name="actSi">Update</string>
    <string name="actNo">Not now</string>

    // MainMenu
    <string name="userMenu">USER</string>
    <string name="userMenuImage">gs://logistics-tycoon.appspot.com/user_menu.png</string>
    <string name="trucksMenu">TRUCKS</string>
    <string name="trucksMenuImage">gs://logistics-tycoon.appspot.com/trucks_menu.png</string>
    <string name="routesMenu">ROUTES</string>
    <string name="routesMenuImage">gs://logistics-tycoon.appspot.com/map2_menu.png</string>
    <string name="headquarterMenu">HEADQUARTER</string>
    <string name="headquarterMenuImage">gs://logistics-tycoon.appspot.com/headquarter_menu.png</string>
    <string name="partnershipMenu">PARTNERSHIP</string>
    <string name="partnershipMenuImage">gs://logistics-tycoon.appspot.com/partnership_menu.png</string>
    <string name="storeMenu">STORE</string>
    <string name="storeMenuImage">gs://logistics-tycoon.appspot.com/money_icon.png</string>

    // login
    <string name="password_remember">Remember password</string>
    <string name="username_or_email">user or email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="or">OR</string>

    // first fields
    <string name="titulo_first_fields">LET\'S BEGIN!</string>
    <string name="new_nickname">Choose your nickname:</string>
    <string name="new_base">Choose your base location:</string>
    <string name="base_error">Choose one base location!</string>

    // user menu
    <string name="titulo_usermenu">PLAYER PROFILE</string>
    <string name="boton_editar_nombre">EDIT</string>
    <string name="level2">points needed for next level</string>
    <string name="change">CHANGE AVATAR</string>

    // nickname dialog
    <string name="tittle_dialog_nickname">CHANGE YOUR NICKNAME</string>


    // truck menu
    <string name="titulo_truckmenu">MENÚ CAMIONES</string>

    // headquarter menu
    <string name="titulo_headquarter_menu">MENÚ BASE</string>

    // Partnership menu
    <string name="titulo_partnership">MENÚ ASOCIACIÓN</string>
    <string name="exitfromusermenu">ExitFromUserMenu</string>

    // Avatar activity
    <string name="titulo_avatar">AVATAR MENU</string>
    <string name="error_buy_avatar">Not enough money to buy this avatar</string>


</resources>