<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_background"
    tools:context=".view.FirstFieldsActivity">

    <TextView
        android:id="@+id/txtTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_first_fields"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTittle"
        android:text="@string/new_nickname"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp" />

    <LinearLayout
        android:id="@+id/layoutNickname"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@drawable/radius_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNickname"
        android:layout_margin="8dp"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="45dp"
                android:background="@drawable/radius_corner_white"
                android:gravity="center" />

            <ImageView
                android:id="@+id/ivNickname"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutNickname"
        android:text="@string/new_base"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp" />


    <LinearLayout
        android:id="@+id/layoutBase"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@drawable/radius_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBase"
        android:layout_margin="8dp"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/spBase"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="45dp"
                android:background="@drawable/radius_corner_white"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/ivBase"
                android:layout_width="80dp"
                android:layout_height="80dp" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:theme="@style/Button"
        android:background="@drawable/style_buttons"
        android:id="@+id/btnFirstFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBase"
        android:layout_marginTop="16dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/accept_button"
        android:textColor="@color/white"
        android:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>